--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,8 @@
 nav {
   position: fixed;
   top: 0;
-  width: 100vw;
+  left: 0;
+  width: 100%;
   background-color: $blue-first;
   z-index: 1;
 }
