--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 <nav>
-  <div class="row align-items-center">
+  <div class="row text-center">
     <div class="col-2"><a routerLink="/about">About</a></div>
     <div class="col-2"><a routerLink="/help">Help</a></div>
     <div class="col-2"><a routerLink="/my-profile">Privacy Policy</a></div>
