--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <app-header></app-header>
 <div class="row">
-  <div [class]='getFeedClass()'>
+  <div [ngClass]='getFeedClass()'>
     <app-feed></app-feed>
   </div>
 </div>
