--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,12 @@
-* { white-space: nowrap; }
+* {
+  white-space: nowrap;
+}
 @import '../global.scss';
 
 nav {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100vw;
   background-color: $blue-first;
   z-index: 1;
