--- a/src/app/feed-my-profile/feed-my-profile.component.html
+++ b/src/app/feed-my-profile/feed-my-profile.component.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <div *ngIf="posts">
   <div *ngFor="let post of posts">
-    <div class="card" *ngIf="post.type === 'trending' && postService.displayedFluxes.trending
-    || post.type === 'friends' && postService.displayedFluxes.friends">
+    <div class="card">
       <div class="card-body">
         <button class="close-post-button" (click)="close(post.id)">x</button>
         <h2 [innerHTML]="post.name | emojis"></h2>
