--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 <div class="row">
   <div [ngClass]='getFeedClass()'>
-    <app-feed></app-feed>
+    <app-feed-home></app-feed-home>
   </div>
 </div>
 <app-footer></app-footer>
