--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="col-5">
-    <app-feed></app-feed>
+    <app-feed-my-profile></app-feed-my-profile>
   </div>
   <div class="col-3 friend-list">
     <div class="text-center" *ngFor="let friend of friends" [style.background-color]="getReputation(friend)">
