--- a/src/app/feed-home/feed-home.component.html
+++ b/src/app/feed-home/feed-home.component.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <div *ngIf="posts">
   <div *ngFor="let post of posts">
-    <div class="card" *ngIf="post.type === 'trending' && postService.displayedFluxes.trending
+    <div class="row" *ngIf="post.type === 'trending' && postService.displayedFluxes.trending
     || post.type === 'friends' && postService.displayedFluxes.friends">
+      <div class="col-1" [ngClass]="getPostTypeStyle(post.type)">
+        {{post.reputation}}
+        {{post.createdOn}}
+      </div>
       <div class="card-body">
-        <button class="close-post-button" (click)="close(post.id)">x</button>
         <h2 [innerHTML]="post.name | emojis"></h2>
-        <div [innerHTML]="post.content | emojis"></div><a class="btn btn-primary">More</a>
-        <div class="font-italic">Yesterday</div>
+        <div [innerHTML]="post.content | emojis"></div>
+        <a class="btn btn-primary">More</a>
       </div>
     </div>
   </div>
