--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <nav>
   <div class="row align-items-center">
-    <div class="col-2">
+    <div class="col-1 pr-0">
       <a routerLink="/home"><img class="w-100" src="assets/img/logo_width.png"></a>
     </div>
     <div class="col-10">
       <div class="container">
         <div class="row py-2 my-2 board" *ngIf="isLoggedIn">
           <div class="col-2">
-            <button class="btn btn-others" (click)="showFluxBox()">Fluxes</button>
+            <button class="h-100 button btn-others" (click)="showFluxBox()">Feeds</button>
             <app-flux-box *ngIf="showFlux"></app-flux-box>
           </div>
-          <div class="col-3 h-100">
-            <input class="form-control align-self-center" placeholder="Search">
+          <div class="col-3">
+            <input class="h-100 form-control" placeholder="Search">
           </div>
           <div class="col-2">
-            <button class="btn btn-others" routerLink="/trusts">Trust Center</button>
+            <button class="h-100 button btn-others" routerLink="/trusts">Trust Center</button>
           </div>
-          <div class="offset-1 col-1">
-            <img class="w-75" src="assets/img/person.png" routerLink="/my-profile">
-          </div>
-          <div class="offset-1 col-1">
-            <img class="w-75" src="assets/img/write.jpg" (click)="showPostBox()">
-            <app-post-box *ngIf="showPost"></app-post-box>
+          <div class="offset-2 col-1">
+            <img src="assets/img/idk.png" routerLink="/my-profile">
           </div>
           <div class="col-1">
-            <img class="w-75" src="assets/img/wheel.png" (click)="showOptionsBox()" />
+            <img src="assets/img/idk2.png" (click)="showPostBox()">
+            <app-post-box *ngIf="showPost" [@itemAnim]></app-post-box>
+          </div>
+          <div class="col-1">
+            <img src="assets/img/wheel.png" (click)="showOptionsBox()" />
             <app-options-box *ngIf="showOptions"></app-options-box>
           </div>
         </div>
-
       </div>
     </div>
   </div>
