--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,16 +11,14 @@ nav {
   .board {
     border-radius: 15px;
     background-color: rgb(218, 241, 244);
-    .btn {
-      border-radius: 5px;
-      width: 100%;
+    input {
+      font-size: 12px;
     }
     img {
       cursor: pointer;
+      width: 38px;
+      height: 38px;
     }
-    .btn-others {
-      color: inherit;
-      background-color: $blue-third;
-    }
+
   }
 }
