--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<app-header></app-header>
-<div class="row">
-  <div [ngClass]='getFeedClass()'>
-    <app-feed-home></app-feed-home>
+<div class="container-fluid p-0 content">
+  <app-header></app-header>
+  <div class="row">
+    <div [ngClass]='getFeedClass()'>
+      <app-feed-home></app-feed-home>
+    </div>
   </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
