--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<app-header></app-header>
-<div class="row">
-  <div class="col-4"><img class="w-100" src="/assets/img/profile.png">
-    <div class="p-4 mt-1 card">
-      <div class="card-body">
-        <div class="card">**Presentation of me**</div>
-        <div>Reputation XXX</div>
-        <div>Reputation of last 10 posts</div>
-        <div>Followed by XXX</div>
-        <div>Live at *region*/*country*</div>
+<div class="container-fluid p-0 content">
+  <app-header></app-header>
+  <div class="row">
+    <div class="col-4"><img class="w-100" src="/assets/img/profile.png">
+      <div class="p-4 mt-1 card">
+        <div class="card-body">
+          <div class="card">**Presentation of me**</div>
+          <div>Reputation XXX</div>
+          <div>Reputation of last 10 posts</div>
+          <div>Followed by XXX</div>
+          <div>Live at *region*/*country*</div>
+        </div>
+      </div>
+    </div>
+    <div class="col-5">
+      <app-feed-my-profile></app-feed-my-profile>
+    </div>
+    <div class="col-3 friend-list">
+      <div class="text-center" *ngFor="let friend of friends" [style.background-color]="getReputation(friend)">
+        <h2>{{friend.name}}</h2><img class="w-50" src="/assets/img/profile.png">
+        <h5>{{friend.reputation}}</h5>
       </div>
     </div>
   </div>
-  <div class="col-5">
-    <app-feed-my-profile></app-feed-my-profile>
-  </div>
-  <div class="col-3 friend-list">
-    <div class="text-center" *ngFor="let friend of friends" [style.background-color]="getReputation(friend)">
-      <h2>{{friend.name}}</h2><img class="w-50" src="/assets/img/profile.png">
-      <h5>{{friend.reputation}}</h5>
-    </div>
-  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
