--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,20 +34,20 @@
     </div>
   </div>
 
-  <div class="row p-4 text-center">
+  <div class="row p-4">
     <div class="col-6">
-      <h4>Feel at home</h4>
+      <h4 class="text-center">Feel at home</h4>
       <p>
         Thanks to its lively community, Echo provides you the unique opportunity to create your own world along fellows from the world.
         <br>Share, enjoy and communicate everything you want.
       </p>
     </div>
     <div class="col-6">
-      <h4>Get to know</h4>
+      <h4 class="text-center">Get to know</h4>
       <p>
         Enter a world where information is yours. Take back control of your life and start gathering people inside your own trust.
         <br>Or perhaps you will prefer a vivid flux providing you everything you need.
-        <br /> Either way, lets start together your journey today
+        <br>Either way, lets start together your journey today
       </p>
     </div>
   </div>
