--- a/src/app/flux-box/flux-box.component.scss
+++ b/src/app/flux-box/flux-box.component.scss
@@ -10,20 +10,20 @@
 }
 .btn-tendance {
   color: inherit;
-  background-color: $blue-first;
+  background-color: $azureon;
 }
 
 .btn-friend {
   color: inherit;
-  background-color: $blue-second;
+  background-color: $yorel;
 }
 
 .btn-daily {
   color: inherit;
-  background-color: $blue-fifth;
+  background-color: $bodel;
 }
 
 .btn-style {
   color: inherit;
-  background-color: $blue-fourth;
+  background-color: $rendeez;
 }
