--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,25 +1,119 @@
 @import '../global.scss';
+.login {
+  background-color: $azureon;
+  em {
+    font-family: 'Modum';
+    font-style: normal;
+    font-size: 30px;
+  }
+  button {
+    border-radius: 50% !important;
+    font-family: 'Modum';
+    &:focus {
+      outline: none;
+    }
+  }
 
-.background {
-  position: relative;
-  width: 100%;
-  height: 1080px;
-}
-.background::before {
-  content: "";
-  position: absolute;
-  top: 0; right: 0;
-  bottom: 0; left: 0;
-  background-color: $blue-first;
-  //background: url('assets/img/background.jpg') no-repeat top center;
-  opacity: 0.8;
-  background: #1e5799; /* Old browsers */
-  background: -moz-linear-gradient(top, $blue-first 0%, $blue-fourth 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, $blue-first 0%, $blue-fourth 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, $blue-first 0%, $blue-fourth 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$blue-first', endColorstr='$blue-fourth',GradientType=0 ); /* IE6-9 */
-}
+  .header {
+    background-color: $black;
+    button {
+      width: 50px;
+      height: 50px;
+      font-size: 14px;
+      line-height: 14px;
+      margin: 5px 0;
+    }
+  }
 
-.header {
-  background-color: #292522;
+  .background {
+    position: relative;
+    width: 100%;
+    background-image: url("assets/img/logo.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0; right: 0;
+      bottom: 0; left: 0;
+      background: url("assets/img/ballon.jpg") no-repeat top center;
+      opacity: 0.5;
+    }
+    .blocks {
+      height: 1080px;
+      .banner {
+        background-color: $black;
+        $border-size: 15px;
+        border-top: $border-size solid $azureon;
+        border-right: $border-size solid $yorel;
+        border-bottom: $border-size solid $bodel;
+        border-left: $border-size solid $rendeez;
+        em {
+          font-family: 'Modum';
+          font-style: normal;
+          font-size: 60px;
+        }
+      }
+      img {
+        opacity: 0.3;
+      }
+      .body {
+        .block {
+          padding: 10px 20px;
+          margin-bottom: 20px;
+          background-color: $rendeez;
+          line-height: 20px;
+          border-radius: 5px;
+          opacity: 0.9;
+          h3 {
+            border-bottom: #ccc solid 1px;
+            span {
+              color: #ccc;
+              cursor: pointer;
+              -webkit-user-select: none; /* Safari */
+              -moz-user-select: none; /* Firefox */
+              -ms-user-select: none; /* IE10+/Edge */
+              user-select: none; /* Standard */
+            }
+            .clickit {
+              padding: 0 7px;
+              border-radius: 100%;
+              border: $yorel 2px solid;
+            }
+          }
+          p {
+            padding: 10px;
+            margin-top: 20px;
+          }
+          th {
+            font-family: 'Modum';
+            font-size: 24px;
+          }
+          th, td {
+            background-color: $black;
+            text-align: center;
+            vertical-align: middle;
+            padding: 10px 30px;
+          }
+        }
+      }
+    }
+  }
+  .subscribe {
+    .header {
+      background: none;
+    }
+    border-radius: 5px;
+    padding: 20px 40px 20px 20px;
+    background-color: $rendeez;
+    .form-group {
+      padding: 20px;
+    }
+    button {
+      width: 100px;
+      height: 100px;
+      font-size: 30px;
+      line-height: 30px;
+    }
+  }
 }
