--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <div class="container-fluid px-0 pb-4 login">
   <div class="header">
-    <form name="form" (ngSubmit)="login()">
+    <form name="form">
       <div class="row d-flex w-100 h-100">
-        <div class="col-5 align-self-center text-right">
-          <h5>Continue your <em>Echo</em> journey ------></h5>
+        <div class="col-3 text-center align-self-center">
+          <h5>Continue your <em>Echo</em> journey --></h5>
         </div>
         <div class="col-2 justify-content-center align-self-center">
-          <input class="form-control pl-3 m-2 w-100" id="email" required name="email" placeholder="Email" [(ngModel)]="user.email" #email="ngModel">
+          <input class="pl-3 m-2 w-100" id="email" required name="email" placeholder="Email" [(ngModel)]="user.email" #email="ngModel">
           <div [hidden]="name.valid || name.pristine"
                class="alert alert-danger">
             Name is required
@@ -20,15 +20,20 @@
         <div class="col-2 justify-content-center align-self-center">
           <input class="pl-3 m-2 w-100" type="password" name="password" placeholder="Password" [(ngModel)]="user.password">
         </div>
-        <div class="col-1 justify-content-center align-self-center">
-          <button class="btn-others">Login</button>
+        <div class="col-2 <text-center></text-center> align-self-center">
+          <button class="btn-others" (click)="login(true)">Login</button>
+        </div>
+        <div class="col-2 text-center align-self-center">
+          <button class="btn-others" (click)="login(false)">Be anonymous</button>
         </div>
       </div>
+      <!--
       <div class="row d-flex w-100 h-100">
         <div class="offset-5 col-6 text-danger align-self-center" *ngIf="errors.login">
           {{errors.login}}
         </div>
       </div>
+    -->
     </form>
   </div>
   <div class="background">
@@ -56,67 +61,7 @@
               </p>
             </div>
           </div>
-          <div class="block">
-            <h3 class="modum text-center">
-              Dislike the spotlight ?
-              <span (click)="spotlight=!spotlight;" *ngIf="!spotlight">+</span>
-              <span (click)="spotlight=!spotlight;" *ngIf="spotlight">x</span>
-            </h3>
-            <div *ngIf="spotlight">
-              <p>
-                Here in Echo, you will find comforting having the choice between being under the spotlight and working from the shadows.
-              </p>
-              <p>
-                We understand and respect your choice, click this <a routerLink='/home'>link</a> and we will grant you an anonymous account. Find below the specifities between a "pub" and an "ano" :
-              </p>
-              <table class="table table-bordered table-striped table-hover">
-                <tr>
-                  <th>
-                    Type
-                  </th>
-                  <th>
-                    Public
-                  </th>
-                  <th>
-                    Anonymous
-                  </th>
-                </tr>
-                <tr>
-                  <th>
-                    Data Collection
-                  </th>
-                  <td>
-                    Everything you feel free to give us, but please do tell us your name at least.
-                  </td>
-                  <td>
-                    Nothing. Really.
-                  </td>
-                </tr>
-                <tr>
-                  <th>
-                    Access & Posting
-                  </th>
-                  <td>
-                    Everywhere.
-                  </td>
-                  <td>
-                    Flux only.
-                  </td>
-                </tr>
-                <tr>
-                  <th>
-                    Friends
-                  </th>
-                  <td>
-                    Yes !
-                  </td>
-                  <td>
-                    No ...
-                  </td>
-                </tr>
-              </table>
-            </div>
-          </div>
+
         </div>
         <div class="col-6">
           <div class="block">
@@ -153,11 +98,80 @@
             </div>
           </div>
         </div>
+        <div class="col-12">
+          <div class="block">
+            <h3 class="modum text-center">
+              Dislike the spotlight ?
+              <span (click)="spotlight=!spotlight;" *ngIf="!spotlight">+</span>
+              <span (click)="spotlight=!spotlight;" *ngIf="spotlight">x</span>
+            </h3>
+            <div *ngIf="spotlight">
+              <p>
+                Here in Echo, you will find comforting having the choice between being under the spotlight and working from the shadows.
+              </p>
+              <p>
+                We understand and respect your choice, click this <a routerLink='/home'>link</a> and we will grant you an anonymous account. Find below the specifities between a "pub" and an "ano" :
+              </p>
+              <div class="container-fluid">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr class="d-flex">
+                      <th class="col-3">
+                        Type
+                      </th>
+                      <th class="col-3">
+                        Public
+                      </th>
+                      <th class="col-3">
+                        Anonymous
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr class="d-flex">
+                      <th class="col-3">
+                        Data Collection
+                      </th>
+                      <td class="col-3">
+                        Everything you feel free to give us, but please do tell us your name at least.
+                      </td>
+                      <td class="col-3">
+                        Nothing. Really.
+                      </td>
+                    </tr>
+                    <tr class="d-flex">
+                      <th class="col-3">
+                        Access & Posting
+                      </th>
+                      <td class="col-3">
+                        Everywhere.
+                      </td>
+                      <td class="col-3">
+                        Flux only.
+                      </td>
+                    </tr>
+                    <tr class="d-flex">
+                      <th class="col-3">
+                        Friends
+                      </th>
+                      <td class="col-3">
+                        Yes !
+                      </td>
+                      <td class="col-3">
+                        No ...
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row w-100">
       <div class="offset-8 col-4">
-        <form class="subscribe" name="form" (ngSubmit)="subscribe()" ref-f="ngForm">
+        <form class="subscribe" id="subscribe" name="form" (ngSubmit)="subscribe()" ref-f="ngForm">
           <div class="header text-center">
             <h3 class="m-0">
               Join us !
