--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ button {
 input, button {
   border-radius: 25px !important;
 }
-
+/*
 input:focus, button:focus {
   box-shadow: 0 0 3pt 2pt $yorel;
 
@@ -30,3 +30,4 @@ input:focus, button:focus {
   text-decoration: none;
   text-align: center;
 }
+*/
