--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,10 @@
           <div class="col-2 align-self-center" *ngIf="!isAnonymous">
             <button class="h-100 button btn-others" routerLink="/trusts">Trust Center</button>
           </div>
-          <div class="offset-2 col-1 align-self-center" *ngIf="!isAnonymous">
+          <div class="col-1 align-self-center" *ngIf="!isAnonymous">
+            <button class="h-100 button btn-others" routerLink="/circles">Circles</button>
+          </div>
+          <div class="offset-1 col-1 align-self-center" *ngIf="!isAnonymous">
             <img src="assets/img/idk.png" routerLink="/my-profile">
           </div>
           <div class="col-1 align-self-center" *ngIf="!isAnonymous">
