--- a/src/app/trusts/trusts.component.html
+++ b/src/app/trusts/trusts.component.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
-<div class="container-fluid p-0 content">
+<div class="container-fluid content">
   <app-header></app-header>
+  <div class="row">
+    <div class="col-4">
+      <h2>Create your own trust by now :</h2>
+      <form name="newTrustForm" (ngSubmit)="createTrust()">
+        <div class="form-group">
+          <label for="newTrustName">Name</label>
+          <input class="form-control" id="newTrustName" type="text" name="newTrustName" [(ngModel)]="newTrust.name">
+        </div>
+        <div class="form-group">
+          <label for="newTrustDescription">Description</label>
+          <input class="form-control" id="newTrustDescription" type="text" name="newTrustDescription" [(ngModel)]="newTrust.description">
+        </div>
+        <button class="btn-others">+</button>
+      </form>
+    </div>
+  </div>
   <div class="row">
     <div class="col-4 card" *ngFor="let trust of trusts">
       <img class="card-img-top" src="assets/img/logo_width.png"/>
