--- a/src/app/trust/trust.component.scss
+++ b/src/app/trust/trust.component.scss
@@ -1,3 +1,32 @@
 * {
   color: black;
 }
+.navbar {
+  position: fixed;
+  top: 50vh;
+  left: 10px;
+  width: 100px;
+  height: 200px;
+}
+.members {
+  position: fixed;
+  top: 30vh;
+  right: 0;
+  height: 60vh;
+  background-color: yellow;
+  .member {
+    background-color: red;
+  }
+}
+.feed {
+  background-color: blue;
+  .post {
+    position: relative;
+    background-color: green;
+    .reputation {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  }
+}
