--- a/src/app/trust/trust.component.html
+++ b/src/app/trust/trust.component.html
@@ -2,9 +2,62 @@
 <div class="container-fluid content">
   <app-header></app-header>
   <div class="row">
-    <h1 class="text-center w-100 my-5">
-      {{trust}}
-    </h1>
+    <div class="navbar">
+      <div>
+        <button (click)="toggle('home');">Home</button>
+      </div>
+      <div>
+        <button (click)="toggle('members');">Members</button>
+      </div>
+      <div>
+        <button (click)="toggle('policies');">Policies</button>
+      </div>
+    </div>
   </div>
+  <div *ngIf="toggles['home']">
+    <div class="row">
+      <h1 class="text-center w-100 my-5">
+        {{trust}}
+      </h1>
+    </div>
+    <div class="row">
+      <div class="offset-4 col-4 justify-content-center align-self-center">
+        <form>
+          <input class="form-control" placeholder="Whats that ?" name="currentPostName" [(ngModel)]="currentPost.name">
+          <app-emojis ref-emojis class='emojis' (onEmoji)='onEmoji($event)'></app-emojis>
+          <textarea class="form-control" placeholder="Say something already" name="currentPostContent" [(ngModel)]="currentPost.content"></textarea>
+        </form>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="offset-1 col-7 feed">
+        <div class="post m-3 p-3" *ngFor="let post of posts">
+          <h3>
+            {{post.name}} -- {{post.owner}}
+          </h3>
+          <div class="reputation">
+            {{post.reputation}}
+          </div>
+          <p>
+            {{post.content}}
+          </p>
+          <div>
+            {{post.createdOn}}
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-3 members">
+      <h2 class="m-2">
+        Your fellow members !
+      </h2>
+      <div class="member m-2 p-2" *ngFor="let member of members">
+        <div>
+          {{member.name}}
+        </div>
+      </div>
+    </div>
+  </div>
+
   <app-footer></app-footer>
 </div>
